# core

./: .gitignore  BUILD  WORKSPACE  googleapis.bzl
.github/: PULL_REQUEST_TEMPLATE.md
auth/cmd/generate_cert/: BUILD  main.go
auth/cmd/generate_csr/: BUILD  main.go
auth/cmd/istio_ca/: BUILD  main.go
auth/cmd/node_agent/: BUILD  main.go
auth/integration/: BUILD  main.go
auth/pkg/cmd/: BUILD
auth/pkg/credential/: BUILD
auth/pkg/pki/: BUILD
auth/pkg/util/: BUILD
auth/pkg/workload/: BUILD  config.go
mixer/adapter/: BUILD  inventory.go
mixer/adapter/denier/: denier.go  denier_test.go
mixer/adapter/kubernetes/: cache.go  cache_test.go  kubernetes.go  kubernetes_test.go
mixer/adapter/list/: list.go  list_test.go
mixer/adapter/memquota/: dedup.go  keys.go  memquota.go  memquota_test.go
mixer/adapter/noop/: noop.go  noop_test.go
mixer/adapter/noopLegacy/: noop.go  noop_test.go
mixer/adapter/prometheus/: prometheus.go  prometheus_test.go  server.go  server_test.go
mixer/adapter/stackdriver/: stackdriver.go  stackdriver_test.go
mixer/adapter/statsd/: BUILD  statsd.go  statsd_test.go
mixer/adapter/stdio/: stdio.go  stdio_test.go
mixer/cmd/client/: main.go
mixer/docker/: BUILD
mixer/template/: BUILD
mixer/test/: handler.go  server.go  server_test.go
pilot/cmd/: BUILD  cmd.go
pilot/model/: BUILD  config.go  config_test.go  conversion_test.go  validation_test.go
pilot/platform/: BUILD
pilot/proxy/: BUILD  context.go  context_test.go
pilot/test/mixer/: BUILD.bazel
pilot/test/mixer/cmd/: BUILD.bazel
prow/: core-presubmit.sh
(+274 files in other folders)
